# Minimalist-webserver-rust

./: Cargo.toml  README.md  aaindex.html  index.html
src/: lib.rs  main.rs
