[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.30", features = ["thread-pool"] }
multithreading = "0.1.1"
num_cpus = "1.16.0"

[[bin]]
name = "http-server"
path = "src/main.rs"

